# mdai-leadership-topic-intelligence

./: .env.example  .gitignore  AGENTS.md  AI_ATTRIBUTION_POLICY.md  CLAUDE.md  LICENSE.md  NOTICE.md  README.md  package.json  pyproject.toml  requirements.txt  run.py
.claude/commands/: agent-help.md  create-prd.md  generate-tasks.md  log-task.md  process-task-list.md
.github/workflows/: attribution-policy.yml  ci.yml
docs/: process-infographics.md  scoring-spec.md  user-guide.md
docs/bp/: 20260213-financial-projections-mdai-ai-consulting-training.md  20260213-financial-projections-mdai-leadership-topic-intelligence.md  20260213-go-to-market-strategy-mdai-ai-consulting-training.md  20260213-go-to-market-strategy-mdai-leadership-topic-intelligence.md  20260213-market-analysis-mdai-ai-consulting-training.md  20260213-market-analysis-mdai-leadership-topic-intelligence.md  20260213-master-business-plan-mdai-ai-consulting-training.md  20260213-master-business-plan-mdai-leadership-topic-intelligence.md  20260213-product-roadmap-mdai-leadership-topic-intelligence.md  20260213-strategic-plan-mdai-ai-consulting-training.md  20260213-strategic-plan-mdai-leadership-topic-intelligence.md  README.md
docs/history/: README.md  pull-request-history.md  repository-history.md  workspace-state-log.md
docs/prd/: 0000-prd-template.md  0001-prd-core-platform-gap-remediation.md  README.md
docs/tasks/: README.md  tasks-0000-prd-template.md  tasks-0001-prd-core-platform-gap-remediation.md
src/agents/: __init__.py  base_agent.py  competitive_scraper.py  content_gap.py  intent_segmenter.py  keyword_researcher.py  report_generator.py  topic_clusterer.py
src/api/: __init__.py  app.py  routes.py
src/contracts/: __init__.py  content_gap.py  intent_segmenter.py  keyword_researcher.py  report_generator.py  topic_clusterer.py
tests/: conftest.py
(+21 files in other folders)
